--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -22,7 +22,7 @@
 
 
 				<!-- Nav -->
-					<nav id="nav">
+					<!--nav id="nav">
 
             {% include nav.html %}
 
@@ -32,7 +32,7 @@
               <li><a href="https://instagram.com/{{site.instagram}}" class="icon fa-instagram" rel="nofollow"><span class="label">Instagram</span></a></li>
               <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
 						</ul>
-					</nav>
+					</nav -->
 
 				<!-- Main -->
 				<div id="main">
